--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: Package contains just two functions. These two functions correspond
 License: MIT
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1.9000
